agrega links redireccionando a "comprar tickets"

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </p>
                 <div class="button">
                     <button type="button" class="btnConferencia" href="">Quiero ser orador</button>
-                    <button type="button" class="btnConferencia green" href="">Comprar Tickets</button>
+                    <button type="button" class="btnConferencia green" href=""><a href="./pages/comprar_tickets.html">Comprar Tickets</a></button>
                 </div>
 
 
