--- a/pages/comprar_tickets.html
+++ b/pages/comprar_tickets.html
@@ -16,15 +16,6 @@
     <link rel="stylesheet" href="../css/comprar_tickets.css">
     <!--favicon-->
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <style>
-        .propia {
-            display: block;
-        }
-
-        .none {
-            display: none;
-        }
-    </style>
 </head>
 
 <body class="body">
@@ -33,8 +24,8 @@
 
         <nav class="navbar navbar-expand-lg navbar-light colorFondo">
             <div class="container">
-                <a class="navbar-brand text-white" href="#">
-                    <img src="../assets/img/codoacodo.png" alt="Logo de codo a codo" width="100px">
+                <a class="navbar-brand text-white" href="../index.html">
+                    <img src="../assets/img/codoacodo.png" alt="Logo de codo a codo" width="100px" href="../index.html">
                     Conf Bs.As.
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
